feat: implemented the user sign up route in both frontend and back
