# packages/schemas/src/user.ts
@@ -1,5 +1,6 @@
 import { z } from 'zod';
 import { Id, IsoDate } from './common.js';
+import { TenantMembership } from './tenantMembership.js';
 
 export const User = z.object({
     id: Id.meta({
@@ -10,6 +11,17 @@ export const User = z.object({
         description: 'User email',
         example: 'user@email.com',
     }),
+
+    passwordHash: z.string(),
+
+    memberships: z.array(TenantMembership).default([]),
+
     createdAt: IsoDate.optional(),
     updatedAt: IsoDate.optional(),
+});
+
+export type User = z.infer<typeof User>;
+
+export const UserProfile = User.omit({
+    passwordHash: true,
 });
